--- a/app/src/main/res/layout/state_list_item.xml
+++ b/app/src/main/res/layout/state_list_item.xml
@@ -13,6 +13,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:transitionName="shared_image"
             android:id="@+id/image_view"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
