--- a/app/src/main/res/layout/activity_generate_gif.xml
+++ b/app/src/main/res/layout/activity_generate_gif.xml
@@ -10,12 +10,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sthagios.stopmotion.create.GenerateGifActivity">
 
-    <EditText
-        android:id="@+id/gif_name"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/usernameWrapper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="@string/edit_text_hint_gif_name" />
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/gif_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:hint="@string/edit_text_hint_gif_name" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/image_list_recycler"
