--- a/app/src/main/res/layout/activity_create_new_image.xml
+++ b/app/src/main/res/layout/activity_create_new_image.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
     android:orientation="vertical">
 
@@ -20,16 +20,15 @@
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true">
 
-    <TextureView
-        android:id="@+id/camera_preview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop" />
+        <com.sthagios.stopmotion.camera.AutoFitTextureView
+            android:id="@+id/camera_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:scaleType="centerCrop" />
     </android.support.v7.widget.CardView>
 
     <ImageButton
-        android:elevation="4dp"
         android:id="@+id/button_capture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,11 +37,11 @@
         android:layout_margin="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/ripple_primary_round"
+        android:elevation="4dp"
         android:padding="8dp"
         android:src="@drawable/ic_camera_black_48dp" />
 
     <ImageButton
-        android:elevation="4dp"
         android:id="@+id/button_switch_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,11 +49,11 @@
         android:layout_alignParentStart="true"
         android:layout_margin="16dp"
         android:background="@drawable/ripple_primary_rectangle_round_corners"
+        android:elevation="4dp"
         android:padding="8dp"
         android:src="@drawable/ic_camera_front_black_48dp" />
 
     <LinearLayout
-        android:elevation="4dp"
         android:id="@+id/container_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,6 +63,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/ripple_primary_rectangle_round_corners"
         android:clickable="true"
+        android:elevation="4dp"
         android:orientation="horizontal"
         android:padding="8dp">
 
@@ -84,7 +84,6 @@
 
 
     <LinearLayout
-        android:elevation="4dp"
         android:id="@+id/container_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,6 +93,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/ripple_primary_rectangle_round_corners"
         android:clickable="true"
+        android:elevation="4dp"
         android:orientation="horizontal"
         android:padding="8dp">
 
