--- a/app/src/main/res/layout/activity_generate_gif.xml
+++ b/app/src/main/res/layout/activity_generate_gif.xml
@@ -10,6 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sthagios.stopmotion.create.GenerateGifActivity">
 
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/usernameWrapper"
         android:layout_width="match_parent"
@@ -20,6 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:nextFocusUp="@id/gif_name"
+            android:nextFocusLeft="@id/gif_name"
             android:hint="@string/edit_text_hint_gif_name" />
 
     </android.support.design.widget.TextInputLayout>
