--- a/app/src/main/res/layout/image_list_item_empty.xml
+++ b/app/src/main/res/layout/image_list_item_empty.xml
@@ -13,14 +13,12 @@
 
         <ImageView
             android:id="@+id/image_view"
+            android:padding="34dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_camera_add" />
 
     </android.support.v7.widget.CardView>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_delete_grey_36dp" />
 </FrameLayout>
