--- a/app/src/main/res/menu/edit.xml
+++ b/app/src/main/res/menu/edit.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/save"
         app:showAsAction="always"
-        android:title="@string/menu_entry_save" />
+        android:title="@string/menu_entry_generate" />
 </menu>
