--- a/app/src/main/res/layout/activity_generate_gif.xml
+++ b/app/src/main/res/layout/activity_generate_gif.xml
@@ -10,11 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sthagios.stopmotion.create.GenerateGifActivity">
 
+    <!-- -->
     <LinearLayout
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:layout_width="0px"
-        android:layout_height="0px"/>
+        android:layout_height="0px"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/usernameWrapper"
@@ -26,16 +27,76 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:nextFocusUp="@id/gif_name"
+            android:hint="@string/edit_text_hint_gif_name"
             android:nextFocusLeft="@id/gif_name"
-            android:hint="@string/edit_text_hint_gif_name" />
+            android:nextFocusUp="@id/gif_name" />
 
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/image_list_recycler"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp">
+
+        <TextView
+            android:id="@+id/converting_info_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="@string/converting_images_amount_state"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/converted_checkmark"
+            android:layout_width="48sp"
+            android:layout_height="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_check_tint_24dp"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/converting_progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/container_magic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="@string/converting_images_magic_state"
+            android:textSize="16sp" />
+
+        <ProgressBar
+            android:id="@+id/magic_progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true" />
+
+        <ImageView
+            android:id="@+id/magic_checkmark"
+            android:layout_width="48sp"
+            android:layout_height="48sp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_check_tint_24dp"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
 </LinearLayout>
