--- a/app/src/main/res/layout/activity_generate_gif.xml
+++ b/app/src/main/res/layout/activity_generate_gif.xml
@@ -1,102 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sthagios.stopmotion.create.GenerateGifActivity">
 
-    <!-- -->
-    <LinearLayout
-        android:layout_width="0px"
-        android:layout_height="0px"
-        android:focusable="true"
-        android:focusableInTouchMode="true" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/usernameWrapper"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <EditText
-            android:id="@+id/gif_name"
+        <include layout="@layout/toolbar" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/appbar"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <!-- -->
+        <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/usernameWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/gif_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:hint="@string/edit_text_hint_gif_name"
+                android:nextFocusLeft="@id/gif_name"
+                android:nextFocusUp="@id/gif_name" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="@string/edit_text_hint_gif_name"
-            android:nextFocusLeft="@id/gif_name"
-            android:nextFocusUp="@id/gif_name" />
+            android:layout_marginTop="16dp"
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp">
 
-    </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:id="@+id/converting_info_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="@string/converting_images_amount_state"
+                android:textSize="16sp" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingEnd="4dp"
-        android:paddingStart="4dp">
+            <ImageView
+                android:id="@+id/converted_checkmark"
+                android:layout_width="48sp"
+                android:layout_height="48sp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_check_tint_24dp"
+                android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/converting_info_text"
-            android:layout_width="wrap_content"
+            <ProgressBar
+                android:id="@+id/converting_progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/container_magic"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="@string/converting_images_amount_state"
-            android:textSize="16sp" />
+            android:layout_marginTop="16dp"
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp">
 
-        <ImageView
-            android:id="@+id/converted_checkmark"
-            android:layout_width="48sp"
-            android:layout_height="48sp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_check_tint_24dp"
-            android:visibility="gone" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="@string/converting_images_magic_state"
+                android:textSize="16sp" />
 
-        <ProgressBar
-            android:id="@+id/converting_progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true" />
+            <ProgressBar
+                android:id="@+id/magic_progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true" />
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/magic_checkmark"
+                android:layout_width="48sp"
+                android:layout_height="48sp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_check_tint_24dp"
+                android:visibility="gone" />
 
-    <RelativeLayout
-        android:id="@+id/container_magic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingEnd="4dp"
-        android:paddingStart="4dp">
+        </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="@string/converting_images_magic_state"
-            android:textSize="16sp" />
-
-        <ProgressBar
-            android:id="@+id/magic_progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true" />
-
-        <ImageView
-            android:id="@+id/magic_checkmark"
-            android:layout_width="48sp"
-            android:layout_height="48sp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_check_tint_24dp"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
