--- a/app/src/main/res/layout/activity_edit_images.xml
+++ b/app/src/main/res/layout/activity_edit_images.xml
@@ -35,24 +35,24 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView"
-                android:layout_gravity="start"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="start"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
                 android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
                 android:clipChildren="false"
                 card_view:cardCornerRadius="4dp"
                 card_view:cardPreventCornerOverlap="false"
                 card_view:cardUseCompatPadding="true">
 
                 <ImageView
-                    android:src="@drawable/ic_camera_front_black_48dp"
                     android:id="@+id/image_preview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/stopmotion_icon_bw" />
 
             </android.support.v7.widget.CardView>
 
