--- a/app/src/main/res/layout/image_list_item_new.xml
+++ b/app/src/main/res/layout/image_list_item_new.xml
@@ -22,9 +22,9 @@
     </android.support.v7.widget.CardView>
 
     <ImageView
+        android:id="@+id/empty_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:padding="8dp"
-        android:src="@drawable/ic_delete_grey_36dp" />
+        android:padding="12dp"
+        android:src="@drawable/animate_delete_open_container" />
 </FrameLayout>
