--- a/app/src/main/res/drawable/ic_delete_grey_24dp.xml
+++ b/app/src/main/res/drawable/ic_delete_grey_24dp.xml
@@ -10,12 +10,12 @@
         android:pivotY="06.0"
         android:rotation="0">
         <path
-            android:fillColor="#a4a4a4"
+            android:fillColor="@color/animation_second"
             android:pathData="M 19.0,4.0 L 15.5,4.0 c 0.0,0.0,0.0,0.0,0.0,0.0 h 0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 V 4.0 H 15.5 v 0.0 L 14.5,3.0 M 14.5,3.0 h 0.0 l 0.0,0.0 h 0.0 l 0.0,0.0 H 14.5 v 0.0 h 0.0 V 3.0 L 9.5,3.0 L 8.5,4.0 L 5.0,4.0 L 5.0,6.0 L 19.0,6.0 L 19.0,4.0 L 19.0,4.0" />
 
     </group>
     <path
-        android:fillColor="#a4a4a4"
+        android:fillColor="@color/animation_second"
         android:pathData="M6,19 C6,20.1,6.9,21,8,21 L16,21 C17.1,21,18,20.1,18,19 L18,7 L6,7 L6,19 Z" />
 
 </vector>
