--- a/app/src/main/res/layout/activity_generate_gif.xml
+++ b/app/src/main/res/layout/activity_generate_gif.xml
@@ -166,7 +166,7 @@
                     android:id="@+id/button_save_gif"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Save" />
+                    android:text="@string/generate_button_save" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
