--- a/app/src/main/res/layout/activity_generate_gif.xml
+++ b/app/src/main/res/layout/activity_generate_gif.xml
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:hint="@string/edit_text_hint_gif_name"
+                android:imeOptions="actionDone"
                 android:nextFocusLeft="@id/gif_name"
                 android:nextFocusUp="@id/gif_name" />
 
@@ -147,23 +148,23 @@
                 tools:scaleY="0">
 
                 <TextView
-                    android:padding="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
+                    android:padding="4dp"
                     android:text="@string/generate_successfully_generated_title"
                     android:textSize="24sp" />
 
                 <TextView
-                    android:padding="4dp"
                     android:id="@+id/gif_generated_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp" />
+                    android:layout_marginBottom="16dp"
+                    android:padding="4dp" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Colored"
                     android:id="@+id/button_save_gif"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/generate_button_save" />
